--- a/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
@@ -325,58 +325,51 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CeM-fx-6hJ">
                                         <rect key="frame" x="36" y="99" width="342" height="210"/>
                                     </imageView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dt8-Qg-Zls">
-                                        <rect key="frame" x="0.0" y="431" width="414" height="275"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PE5-4u-5a9">
+                                        <rect key="frame" x="0.0" y="431" width="414" height="294"/>
+                                        <connections>
+                                            <segue destination="Yvd-Wc-0py" kind="embed" id="8m3-NF-YOI"/>
+                                        </connections>
+                                    </containerView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwj-gJ-YsU">
+                                        <rect key="frame" x="0.0" y="431" width="414" height="294"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="275" id="e8g-la-oXs"/>
+                                            <constraint firstAttribute="height" constant="294" id="Tkl-6M-4D5"/>
                                         </constraints>
-                                        <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="recipeDetailCell" textLabel="5Gy-z9-U16" style="IBUITableViewCellStyleDefault" id="P9V-Uw-2LP">
-                                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="P9V-Uw-2LP" id="zL0-3W-2EL">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5Gy-z9-U16">
-                                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
+                                        <connections>
+                                            <segue destination="YOe-vQ-BAa" kind="embed" identifier="ingredientsTableView" id="Dmu-X7-gZZ"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="bFQ-fG-8qz" firstAttribute="width" secondItem="0Xd-qe-5Z6" secondAttribute="width" multiplier="0.8" id="2WS-Sa-go6"/>
                                     <constraint firstItem="gqe-2B-R7W" firstAttribute="centerX" secondItem="0Xd-qe-5Z6" secondAttribute="centerX" id="3MM-oi-ac1"/>
+                                    <constraint firstItem="rwj-gJ-YsU" firstAttribute="top" secondItem="HLN-l3-qtQ" secondAttribute="bottom" constant="8" id="3Xw-kK-4pI"/>
                                     <constraint firstItem="HLN-l3-qtQ" firstAttribute="top" secondItem="BnZ-S1-Wdd" secondAttribute="bottom" constant="16" id="3bB-E3-fAG"/>
+                                    <constraint firstAttribute="bottom" secondItem="rwj-gJ-YsU" secondAttribute="bottom" id="7DI-Qe-WjN"/>
                                     <constraint firstItem="HLN-l3-qtQ" firstAttribute="leading" secondItem="JfC-Ve-eoS" secondAttribute="trailing" constant="10" id="8Th-hH-oWV"/>
-                                    <constraint firstItem="dt8-Qg-Zls" firstAttribute="leading" secondItem="0Xd-qe-5Z6" secondAttribute="leading" id="9l4-RE-FS1"/>
                                     <constraint firstItem="BnZ-S1-Wdd" firstAttribute="top" secondItem="gqe-2B-R7W" secondAttribute="bottom" constant="28" id="Bbj-oD-tic"/>
                                     <constraint firstAttribute="trailing" secondItem="CeM-fx-6hJ" secondAttribute="trailing" constant="36" id="DwW-Ga-bdP"/>
+                                    <constraint firstAttribute="trailing" secondItem="PE5-4u-5a9" secondAttribute="trailing" id="FON-jj-Eu5"/>
                                     <constraint firstItem="CeM-fx-6hJ" firstAttribute="centerX" secondItem="0Xd-qe-5Z6" secondAttribute="centerX" id="Gfk-eN-WNb"/>
                                     <constraint firstItem="JfC-Ve-eoS" firstAttribute="top" secondItem="BnZ-S1-Wdd" secondAttribute="bottom" constant="16" id="Gwu-bQ-YbA"/>
                                     <constraint firstAttribute="trailing" secondItem="gqe-2B-R7W" secondAttribute="trailing" constant="36" id="H8x-xn-3jL"/>
-                                    <constraint firstItem="dt8-Qg-Zls" firstAttribute="top" secondItem="HLN-l3-qtQ" secondAttribute="bottom" constant="8" id="HhY-Yk-QNB"/>
                                     <constraint firstItem="bFQ-fG-8qz" firstAttribute="centerX" secondItem="0Xd-qe-5Z6" secondAttribute="centerX" id="Lrs-e0-dEj"/>
                                     <constraint firstItem="bFQ-fG-8qz" firstAttribute="top" secondItem="0Xd-qe-5Z6" secondAttribute="top" constant="35" id="NKr-7b-syR"/>
-                                    <constraint firstAttribute="bottom" secondItem="dt8-Qg-Zls" secondAttribute="bottom" id="WqQ-Fv-mbC"/>
+                                    <constraint firstItem="PE5-4u-5a9" firstAttribute="top" secondItem="HLN-l3-qtQ" secondAttribute="bottom" constant="8" id="VqG-JD-NvE"/>
                                     <constraint firstItem="HLN-l3-qtQ" firstAttribute="trailing" secondItem="BnZ-S1-Wdd" secondAttribute="trailing" id="Y0j-VL-r1P"/>
                                     <constraint firstItem="BnZ-S1-Wdd" firstAttribute="centerX" secondItem="0Xd-qe-5Z6" secondAttribute="centerX" id="fsF-ox-2tI"/>
+                                    <constraint firstItem="rwj-gJ-YsU" firstAttribute="leading" secondItem="0Xd-qe-5Z6" secondAttribute="leading" id="fuq-sa-wOK"/>
                                     <constraint firstItem="BnZ-S1-Wdd" firstAttribute="width" secondItem="0Xd-qe-5Z6" secondAttribute="width" multiplier="0.9" id="ioF-qc-eYn"/>
                                     <constraint firstItem="CeM-fx-6hJ" firstAttribute="top" secondItem="bFQ-fG-8qz" secondAttribute="bottom" constant="30" id="jxa-Sd-i2J"/>
                                     <constraint firstItem="JfC-Ve-eoS" firstAttribute="centerX" secondItem="0Xd-qe-5Z6" secondAttribute="centerX" id="lar-0j-BNv"/>
+                                    <constraint firstAttribute="bottom" secondItem="PE5-4u-5a9" secondAttribute="bottom" id="mxP-ha-XEy"/>
+                                    <constraint firstAttribute="trailing" secondItem="rwj-gJ-YsU" secondAttribute="trailing" id="oeb-E8-ksQ"/>
                                     <constraint firstItem="gqe-2B-R7W" firstAttribute="top" secondItem="bFQ-fG-8qz" secondAttribute="bottom" constant="30" id="qkA-0d-sJ7"/>
                                     <constraint firstItem="BnZ-S1-Wdd" firstAttribute="top" secondItem="CeM-fx-6hJ" secondAttribute="bottom" constant="28" id="rQ0-nQ-txY"/>
                                     <constraint firstItem="gqe-2B-R7W" firstAttribute="leading" secondItem="0Xd-qe-5Z6" secondAttribute="leading" constant="36" id="wRQ-OL-xD0"/>
-                                    <constraint firstAttribute="trailing" secondItem="dt8-Qg-Zls" secondAttribute="trailing" id="xxH-io-m7j"/>
                                     <constraint firstItem="CeM-fx-6hJ" firstAttribute="leading" secondItem="0Xd-qe-5Z6" secondAttribute="leading" constant="36" id="z3w-oR-aQo"/>
+                                    <constraint firstItem="PE5-4u-5a9" firstAttribute="leading" secondItem="0Xd-qe-5Z6" secondAttribute="leading" id="zkP-5n-Uer"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -398,10 +391,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="HLN-l3-qtQ" id="jTJ-sW-FoO"/>
+                        <outlet property="directionsView" destination="PE5-4u-5a9" id="hAP-gM-XLU"/>
+                        <outlet property="ingredientsView" destination="rwj-gJ-YsU" id="exB-RU-BHo"/>
                         <outlet property="photoImageView" destination="CeM-fx-6hJ" id="85k-ri-ix6"/>
                         <outlet property="recipeItemTextField" destination="BnZ-S1-Wdd" id="0Nh-2u-Hlz"/>
                         <outlet property="recipeNameTextField" destination="0OM-Ry-XJ4" id="H57-J2-ZC6"/>
-                        <outlet property="tableView" destination="dt8-Qg-Zls" id="G0z-z4-RiZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Zo-dq-Dfe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -476,16 +470,16 @@
             </objects>
             <point key="canvasLocation" x="352" y="1450"/>
         </scene>
-        <!--View Controller-->
+        <!--Ingredients List View Controller-->
         <scene sceneID="FB6-fz-AhF">
             <objects>
-                <viewController id="YOe-vQ-BAa" sceneMemberID="viewController">
+                <viewController id="YOe-vQ-BAa" customClass="IngredientsListViewController" customModule="MyDigitalCookbook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CYU-Oy-qEO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rWT-gG-90Q">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ingredientCell" textLabel="U8u-l2-84I" style="IBUITableViewCellStyleDefault" id="idr-ji-ObO">
@@ -517,21 +511,24 @@
                             <constraint firstAttribute="bottom" secondItem="rWT-gG-90Q" secondAttribute="bottom" id="qv6-0g-lPL"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="rWT-gG-90Q" id="XY9-Gs-3ld"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EPM-Ej-fpL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4625" y="431"/>
+            <point key="canvasLocation" x="3472" y="466"/>
         </scene>
-        <!--View Controller-->
+        <!--Directions List Table View Controller-->
         <scene sceneID="kvj-EX-HWO">
             <objects>
-                <viewController id="Yvd-Wc-0py" sceneMemberID="viewController">
+                <viewController id="Yvd-Wc-0py" customClass="DirectionsListTableViewController" customModule="MyDigitalCookbook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wu9-xX-ari">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="raW-6A-TgP">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
                                 <color key="backgroundColor" red="0.46666666670000001" green="1" blue="0.57647058819999997" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="directionCell" textLabel="HaD-P4-pF5" style="IBUITableViewCellStyleDefault" id="bv2-qX-bOA">
@@ -566,7 +563,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="59K-XN-Hpg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4655" y="1102"/>
+            <point key="canvasLocation" x="3471" y="777"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
